--- a/3.linear_models/slides/slideslinearmodels.Rnw
+++ b/3.linear_models/slides/slideslinearmodels.Rnw
@@ -326,7 +326,7 @@ setwd()
 @
 
 <<echo=FALSE>>=
-setwd(dir = "Documents/GitHub/Rcode-Stats-Bubbles/3.linear_models/")
+setwd(dir = "~/Documents/GitHub/Rcode-Stats-Bubbles/3.linear_models/")
 @
 
 <<a1>>=
@@ -461,33 +461,31 @@ anova(fitlm)
 \end{frame}
 %%%%%%%%%%%
 
-%
-% \begin{frame}{Visualizing}
-% \begin{figure}
-% <<boxplot2, dev='tikz', echo=FALSE >>=
-% setPar()
-% boxplot(activity ~ weather, data = dat.behav, ylab="activity")
-% @
-% \end{figure}
-% \end{frame}
-% %%%%%%%%%%%%%%%%%%%%%%
-%
-% \begin{frame}{Does wheather change behavior?}
-%
-% <<>>=
-% tt <- t.test(formula = activity ~ weather, data = dat.behav, var.equal = TRUE)
-%
-% @
-%
-% \end{frame}
-% %%%%%%%%%%%
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Linear models in details}
-\begin{frame}
-
+\begin{frame}[fragile]{Interpretation}
+  <<>>=
+    Ans <- read.csv(file = "Anscombe.csv")
+  @
 \end{frame}
 %%%%%%%%%%%
 
+\begin{frame}{Linear model basic assumptions}
+ \begin{block}{}
+     \begin{itemize}[<+->]
+      \item Linear combination of parameters (including transformation, polynoms, interactions\dots)\\ \textit{Risk: biologically meaningless}
+      \item Predictor not perfectly correlated \\ \textit{Risk: Model won't run, unstable convergence, or huge SE}
+       \item {\color{red!20!black}{Little error in predictors}}\\ \textit{Risk: bias estimates (underestimate with Gaussian error)}
+       \item {\color{red!50!black}{Gaussian error distribution}}\\ \textit{Risk: Poor predictions}
+       \item {\color{red!70!black}{Homoscedasticity (constant error variance)}}\\ \textit{Risk: Over-optimistic uncertainty, unreliable predictions}
+       \item {\color{red!99!black}{Independence of error}}\\ \textit{Risk: Bias and over-optimistic uncertainty}
+     \end{itemize}
+ \end{block}
+\end{frame}
+%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Bonus fun}
 \begin{frame}{Extra exercises}
 
