--- a/3.linear_models/slides/slideslinearmodels.tex
+++ b/3.linear_models/slides/slideslinearmodels.tex
@@ -71,7 +71,7 @@
 \title[\textbf{Linear models}]{Statistical inference and linear models}
 \date{\today}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 
@@ -474,7 +474,11 @@ mean of x mean of y
 \end{frame}
 %%%%%%%%%%
 
-\begin{frame}[fragile]{ANOVA}
+\begin{frame}[fragile]{ANOVA}  \begin{enumerate}
+    \item What is the fastest way to get row averages in a data-frame?
+    \item Create a function called colVars, like colMeans but for variance
+    \item Create nice plots to visualize iris data (ideally journal-quality)
+  \end{enumerate}
 
 
 \begin{knitrout}
@@ -770,6 +774,14 @@ Not necessarily wrong, but typical interpretation assumes:
 \begin{frame}{Extra exercises}
 
 
+
+\begin{alertblock}{General R coding}
+  \begin{enumerate}
+    \item What is the fastest way to get row averages in a data-frame?
+    \item Create a function called colVars, like colMeans but for variance
+    \item Create nice plots to visualize iris data (ideally journal-quality)
+  \end{enumerate}
+\end{alertblock}
 
 \begin{alertblock}{Linear models}
   \begin{enumerate}
